Image spacing fix

--- a/styles/website.sass
+++ b/styles/website.sass
@@ -317,9 +317,9 @@ body,
     margin-bottom: $v-spacing * 0.5;
     pointer-events: none;
 
-  // h1, h2, h3, h4, h5, h6
-    // + p > img
-      // margin-top: - ($v-spacing * 0.75);
+  h1, h2, h3, h4, h5, h6
+    + p > img
+      margin-top: - ($v-spacing * 0.75);
 
   hr
     height: 1px;
